<resources>
    <string name="app_name">NS</string>
    <string name="title_activity_extra_result">ExtraResultActivity</string>
    <string name="view_crowd_text">Expected crowd :</string>
    <string name="view_spoor">Departure Track :</string>
    <string name="reistijd">Journey time:</string>
    <string name="minuten"> minutes</string>
    <string name="uitstapzijde">Exit side :</string>
    <string name="trainType">Train type :</string>
    <string name="zoekKnop">Find journey</string>
    <string name="startText">Station to station planner</string>
    <string name="hint1">From station</string>
    <string name="hint2">To station</string>
    <string name="savedJourney">Search history</string>
    <string name="originActualDateTime">Actual</string>
    <string name="destActualDateTime"><u>Search history</u></string>
    <string name="price">one way, second class</string>
    <string name="priceSign">€</string>
    <string name="waitText">This can take a moment..</string>
    <string name="removeAll"><u>Clean history</u></string>
    <string name="timeDate"><u>Pick time</u></string>
    <string name="departure">departure</string>
    <string name="transfer">Transfer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
