<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <AutoCompleteTextView
        android:id="@+id/inp_from"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="73dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="248dp"
        android:completionThreshold="1"
        android:hint="From statoin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/inp_to"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="73dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="12dp"
        android:completionThreshold="1"
        android:hint="To station"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inp_from" />

    <Button
        android:id="@+id/btn_find"
        android:layout_width="185dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:background="@color/colorPrimary"
        android:fontFamily="serif"
        android:text="@string/zoekKnop"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="15sp"
        app:layout_constraintCircleRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pickTime"
        tools:background="@android:color/holo_blue_light"
        tools:backgroundTint="@android:color/holo_blue_dark" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="190dp"
        android:layout_height="139dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ns_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/startText"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218" />

    <Button
        android:id="@+id/btn_history"
        android:layout_width="168dp"
        android:layout_height="23dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorBackgroundDark"
        android:fontFamily="serif"
        android:text="@string/savedJourney"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_find"
        app:layout_constraintVertical_bias="0.68" />

    <Button
        android:id="@+id/btn_pickTime"
        android:layout_width="101dp"
        android:layout_height="37dp"
        android:layout_marginEnd="141dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorBackgroundDark"
        android:fontFamily="serif"
        android:text="@string/timeDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inp_to" />

    <TextView
        android:id="@+id/view_dateTime"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_find"
        app:layout_constraintEnd_toStartOf="@+id/btn_departure"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pickTime"
        app:layout_constraintVertical_bias="0.36" />

    <Button
        android:id="@+id/btn_departure"
        android:layout_width="112dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:fontFamily="serif"
        android:text="@string/departure"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toTopOf="@+id/btn_find"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pickTime"
        app:layout_constraintVertical_bias="0.24000001" />



</android.support.constraint.ConstraintLayout>